Usando process.cwd() para ejecutar el script de forma global

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "browser": "firefox",
     "folder": {
-        "development": "app/development",
-        "production": "app/folder",
+        "development": "development",
+        "production": "",
         "partials": "partials"
     }
 }
