Cambio de nombre de proyecto. Adicion de version y descripcion en package.json. Cambio de dependencias de desarrollo a dependencias

--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "gulp-scripts",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "name": "simple-web",
+  "version": "0.0.1-alpha.1",
+  "description": "Compile your pug and sass files into html and css for refresh the view of the  browser automatically, with a single command",
+  "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp simple-web"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DiDream/gulp-simple-web.git"
+    "url": "git+https://github.com/DiDream/simple-web.git"
   },
   "author": "Alex Jimmy Montaño - @DiDream",
   "license": "MIT",
@@ -17,16 +16,14 @@
     "simpleweb": "bin/simple-web.js"
   },
   "bugs": {
-    "url": "https://github.com/DiDream/gulp-simple-web/issues"
+    "url": "https://github.com/DiDream/simple-web/issues"
   },
-  "homepage": "https://github.com/DiDream/gulp-simple-web#readme",
-  "devDependencies": {
+  "homepage": "https://github.com/DiDream/simple-web#readme",
+  "dependencies": {
     "browser-sync": "^2.18.8",
     "gulp": "^3.9.1",
     "gulp-pug": "^3.2.0",
-    "gulp-sass": "^3.1.0"
-  },
-  "dependencies": {
+    "gulp-sass": "^3.1.0",
     "shelljs": "^0.7.6",
     "yargs": "^6.6.0"
   }
